--- a/product/index.html
+++ b/product/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="../js/script.mjs" type="module" defer></script>
+    <script src="../js/script.js" type="module" defer></script>
   </head>
   <body>
     <header>
