--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <script
-      src="/js1-course-assignment/js/script.js"
-      type="module"
-      defer
-    ></script>
+    <script src="/js/script.js" type="module" defer></script>
   </head>
   <body>
     <header>
