added and styled documents and confirmation

--- a/checkout/confirmation/index.html
+++ b/checkout/confirmation/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta type="description" content="Checkout confirmation" />
     <title>Square Eyes | Checkout Confirmation</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../../css/confirmation.css" />
     <script
       src="https://kit.fontawesome.com/a5e5d5dde4.js"
       crossorigin="anonymous"
@@ -33,7 +33,13 @@
     <main>
       <section>
         <h1>Checkout Confirmation</h1>
-        <p>Thank you for your order!</p>
+        <div class="confirmation-message">
+          <h2>Thank you for choosing us!</h2>
+          <p>
+            We hope you enjoy your film experience. If you have any questions,
+            please don't hesitate to contact us at support@squareeyes.com
+          </p>
+        </div>
       </section>
     </main>
     <footer></footer>
