styled footer and loading indicator

--- a/checkout/index.html
+++ b/checkout/index.html
@@ -36,6 +36,19 @@
         <div id="cart-container" class="cart-container"></div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-logo">
+        <img
+          src="../logo/squareeyes-logo.png"
+          alt="Square Eyes Logo"
+          class="logo"
+        />
+        <p>&copy; 2024 Square Eyes. All rights reserved.</p>
+      </div>
+      <div class="footer-links">
+        <a href="../documents/privacy.html">Privacy Policy</a>
+        <a href="../documents/terms.html">Terms and Conditions</a>
+      </div>
+    </footer>
   </body>
 </html>
