--- a/product/index.html
+++ b/product/index.html
@@ -34,10 +34,23 @@
       <section>
         <h1>Details</h1>
         <div id="film-detail" class="film-detail">
-          <p>Loading details...</p>
+          <span class="loader"></span>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-logo">
+        <img
+          src="../logo/squareeyes-logo.png"
+          alt="Square Eyes Logo"
+          class="logo"
+        />
+        <p>&copy; 2024 Square Eyes. All rights reserved.</p>
+      </div>
+      <div class="footer-links">
+        <a href="../documents/privacy.html">Privacy Policy</a>
+        <a href="../documents/terms.html">Terms and Conditions</a>
+      </div>
+    </footer>
   </body>
 </html>
