--- a/checkout/confirmation/index.html
+++ b/checkout/confirmation/index.html
@@ -42,6 +42,19 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-logo">
+        <img
+          src="../../logo/squareeyes-logo.png"
+          alt="Square Eyes Logo"
+          class="logo"
+        />
+        <p>&copy; 2024 Square Eyes. All rights reserved.</p>
+      </div>
+      <div class="footer-links">
+        <a href="../../documents/privacy.html">Privacy Policy</a>
+        <a href="../../documents/terms.html">Terms and Conditions</a>
+      </div>
+    </footer>
   </body>
 </html>
