--- a/checkout/index.html
+++ b/checkout/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta type="description" content="Checkout" />
+    <meta name="description" content="Checkout" />
     <title>Square Eyes | Checkout</title>
     <link rel="stylesheet" href="../css/checkout.css" />
     <script
