--- a/documents/privacy.html
+++ b/documents/privacy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta type="description" content="Square Eyes" />
+    <meta name="description" content="Square Eyes" />
     <title>Square Eyes | Privacy Policy</title>
     <link rel="stylesheet" href="../css/documents.css" />
     <script
