--- a/checkout/confirmation/index.html
+++ b/checkout/confirmation/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta type="description" content="Checkout confirmation" />
+    <meta name="description" content="Checkout confirmation" />
     <title>Square Eyes | Checkout Confirmation</title>
     <link rel="stylesheet" href="../../css/confirmation.css" />
     <script
