--- a/product/index.html
+++ b/product/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta type="description" content="Product details" />
+    <meta name="description" content="Product details" />
     <title>Square Eyes | Product Details</title>
     <link rel="stylesheet" href="../css/product.css" />
     <script
